# im2col_2D

./: CMakeLists.txt  README.md  Test Notebook.ipynb
python/: im2col.py
src/: im2col_AVX2.cpp  im2col_NEON.cpp  im2col_ref.cpp
